# line_tracing_bot

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: display.launch.py  display.launch.xml
line_tracing_bot/: line_follower.py
rviz/: urdf_config.rviz
urdf/: camera.xacro  common_properties.xacro  mobile_base.xacro  robot.urdf  robot.urdf.xacro
