cmake_minimum_required(VERSION 3.8)
project(line_tracing_bot)

if(CMAKE_COMPILER_IS_GNUCXX or CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

install(
  DIRECTORY urdf launch
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
