<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_tracing_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rafael.p.ramores@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

<!--  <buildtool_depend>ament_cmake</buildtool_depend>-->

<!--  <test_depend>ament_lint_auto</test_depend>-->
<!--  <test_depend>ament_lint_common</test_depend>-->

<!--  <export>-->
<!--    <build_type>ament_cmake</build_type>-->
<!--  </export>-->

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
